--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "samansubgraph",
   "license": "UNLICENSED",
+  "version": "0.0.11",
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
